# dr_libphonenumber

./: .gitignore  .gitmodules  Cargo.toml  README.md  analysis_options.yaml  ffigen_config.yaml  justfile  melos.yaml  pubspec.yaml
.github/workflows/: publish-binaries.yml  publish-ios-binaries.yml
android/: build.gradle
dr_libphonenumber/: analysis_options.yaml  ffigen_config.yaml  pubspec.yaml
dr_libphonenumber/android/: build.gradle  settings.gradle
dr_libphonenumber/example/: analysis_options.yaml  pubspec.yaml
dr_libphonenumber/ios/: dr_libphonenumber.podspec
dr_libphonenumber/lib/: dr_libphonenumber.dart
dr_libphonenumber/macos/: dr_libphonenumber.podspec
dr_libphonenumber/test/: dr_libphonenumber_test.dart  dr_libphonenumber_test_runner.dart
dr_libphonenumber_platform_interface/: analysis_options.yaml  pubspec.yaml
dr_libphonenumber_web/: pubspec.yaml  pubspec_overrides.yaml
dr_libphonenumber_web/lib/: dr_libphonenumber_web.dart
example/: README.md  pubspec.yaml
ios/: dr_libphonenumber.podspec
lib/: bindings.dart  dr_libphonenumber.dart  dr_libphonenumber_web.dart
native/dr_libphonenumber/: Cargo.toml  README.md  cbindgen.toml  makefile
native/dr_libphonenumber/src/: dr_libphonenumber.rs  lib.rs
native/dr_libphonenumber/src/clean_up/: free_memory.rs
native/dr_libphonenumber/src/tests/: test_dr_libphonenumber.rs
native/dr_libphonenumber/src/utils/: number_type.rs  string_helper.rs
scripts/: build-android.sh  build-apple.sh  build-web.sh  build-win-linux.sh  run-web-server-for-testing.sh
test/: dr_libphonenumber_test.dart
(+123 files in other folders)
